--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
